# lab2v2

./: .gitignore  CMakeLists.txt  README.md  aggregating.py  cleanup.py  indexing.py  lab1_results.csv  lab2  lab2_real_problem_results.csv  lab2_results.csv  lab3_real_simulation.csv  lab3_results.csv  lab_1_real_fibonacci.csv  lab_1_real_lagrange.csv  main.cpp  matrix.h  ode_solver.cpp  opt_alg.cpp  project_code.txt  solution.h  user_funs.cpp  user_funs.h
data/: hj_iterations.csv  lab2_real_simulation_HJ.csv  lab2_real_simulation_Rosenbrock.csv  lab3_real_problem.csv  lab3_real_simulation.csv  lab3_results.csv  lab4_real_results.csv  lab4_real_results.txt  lab4_results.csv  lab4_rzeczywisty_wyniki.csv  lab4_tabela1.csv  lab4_tabela3.csv  lab4_test_CG.txt  lab4_test_Newton.txt  lab4_test_SD.txt  lab4_test_results.txt  lab4_testowa_tabela.csv  lab4_trajektorie.csv  lab5_problem_rzeczywisty.csv  lab5_tabela1.csv  lab5_tabela2.csv  lab5_test_a_1.csv  lab5_test_a_10.csv  lab5_test_a_100.csv  rosen_iterations.csv
include/: matrix.h  ode_solver.h  opt_alg.h  solution.h  user_funs.h
src/: lab2_real_simulation_HJ.csv  lab2_real_simulation_Rosenbrock.csv  lab2_results.csv  main  main.cpp  matrix.cpp  ode_solver.cpp  opt_alg.cpp  solution.cpp  user_funs.cpp
